ADP.WebComponents/adp-web-components/src/components/components/shift-select-dropdown.css
:host {
  display: block;
  all: initial !important;
  font-family: inherit !important;
  font-family: 'Noto Kufi Arabic', 'Nunito', Roboto, Arial, sans-serif !important;
}

*,
:host * {
  font-family: inherit !important;
}

.shift-select-container {
  @apply z-[551] flex flex-col pointer-events-none fixed bg-white border rounded-md shadow opacity-0 transition-opacity duration-300 max-h-[250px] overflow-auto;
  top: var(--shift-select-top, 0);
  left: var(--shift-select-left, 0);
  width: var(--shift-select-width, auto);
}

.shift-select-container-open {
  @apply opacity-100 pointer-events-auto;
}

.shift-select-option {
  @apply flex justify-between items-center text-start px-4 py-2 hover:bg-slate-100;
}

.shift-select-option-selected {
  @apply bg-slate-200;
}
.shift-select-option-tick {
  @apply size-5 opacity-0 transition !duration-300;
}

.shift-select-option-tick-selected {
  @apply opacity-100;
}

.shift-select-empty-container {
  @apply h-[100px] flex items-center justify-center;
}

.shift-select-empty-container-error {
  @apply text-red-500;
}

@keyframes spin-animation {
  to {
    transform: rotate(360deg);
  }
}

.shift-select-spinner {
  animation: spin-animation 2s linear infinite;
  @apply !size-[22px];
}

.phone-country-selection-select-container {
  width: 200px !important;
}

.custom-shift-select-country-option {
  gap: 8px;
  display: flex;
  overflow: hidden;
  flex-direction: row;
  background: transparent;
}

.shift-select-country-code-label {
  display: block;
  min-width: 30px;
  text-transform: capitalize;
}

